--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.21",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.1.6",
     "eslint-plugin-react-refresh": "^0.4.24",
@@ -90,15 +91,5 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.49.0"
-  },
-  "scripts": {
-    "dev": "next dev -p 3005",
-    "build": "next build",
-    "export": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
   }
 }
